<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="author"> Developed by Researchers from:</string>
    <string name="app_name">Differentiation Detector</string>
    <string name="action_settings">Settings</string>
    <string name="action_history">Result History</string>
    <string name="action_help">Help</string>
    <string name="main_page_title">Select Applications</string>
    <string name="next_button">Next</string>
    <string name="selected">Selected</string>
    <string name="back_button">Back</string>
    <string name="selected_apps">Selected Applications</string>
    <string name="replay">CLICK HERE TO PROCEED</string>
    <string name="title_activity_replay">Loading…</string>
    <string name="title_activity_crash">CrashActivity</string>
    <string name="image_name">App image</string>
    <string name="Viber">Viber</string>
    <string name="Viber_random">Viber (random)</string>
    <string name="Netflix">Netflix</string>
    <string name="Netflix_random">Netflix (random)</string>
    <string name="Spotify">Spotify</string>
    <string name="Spotify_random">Spotify (random)</string>
    <string name="Skype">Skype</string>
    <string name="Skype_random">Skype (random)</string>
    <string name="Youtube">Youtube</string>
    <string name="Youtube_random">Youtube (random)</string>
    <string name="Hangouts">Hangouts</string>
    <string name="Hangouts_random">Hangouts (random)</string>
    <string name="pending">Waiting to start</string>
    <string name="start_replay">Starting the replay</string>
    <string name="processing">Processing trace</string>
    <string name="vpn">Trying to connect to VPN</string>
    <string name="disconnect_vpn">Disconnecting VPN</string>
    <string name="random">Starting random replay</string>
    <string name="load_q">Loading the data to send</string>
    <string name="create_side_channel">Creating side channel</string>
    <string name="ask4permission">Asking for permission</string>
    <string name="receive_server_port_mapping">Receiving server port mapping</string>
    <string name="receive_sender_count">Receiving UDP information</string>
    <string name="create_tcp_client">Creating all TCP client sockets</string>
    <string name="create_udp_client">Creating all UDP client sockets</string>
    <string name="run_notf">Starting side channel notifier</string>
    <string name="run_receiver">Starting the Receiver process</string>
    <string name="run_sender">Starting the Sender process</string>
    <string name="send_done">Notifying server that replay is complete</string>
    <string name="send_jitter">Sending the jitter statistics</string>
    <string name="receive_result">Receiving results</string>
    <string name="finish_open">Finished replay in the clear</string>
    <string name="finish_vpn">Finished replay over VPN</string>
    <string name="finish_random">Finished random replay</string>
    <string name="crash_toast_text">Sending report for improvement</string>
    <string name="crash_activity_title">Press back button to exit!</string>
    <string name="downloading">Downloading File</string>
    <string name="error">Replay aborted</string>
    <string name="vpn_connect">Trying to connect VPN</string>
    <string name="vpn_failed">Failed to connect VPN</string>
    <string name="appResultButton">Results</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="setting">Settings</string>
    <string name="log">Log</string>
    <string name="zero_percent">0%</string>
    <string name="slower">slower</string>
    <string name="errMsgTitle">An error occurred</string>
    <string name="errMsg">Sorry, the app crashed. A crash log will be sent to our server. Sorry for the inconvenience!</string>
    <string name="timing_label">Enable Inter-packet Timing?</string>
    <string name="timing_Yes">true</string>
    <string name="timing_No">false</string>
    <string name="server_label">Select Server</string>
    <string name="server_replay">replay-s.meddle.mobi</string>
    <string name="server_hint">replay-s.meddle.mobi</string>
    <string name="server_adrian_local">10.0.1.16</string>
    <string name="select_iteration">Select Iteration Times</string>
    <string name="iteration_1">1</string>
    <string name="iteration_2">2</string>
    <string name="iteration_3">3</string>
    <string name="select_random">Check me if you also want to run random replay for each application.</string>
    <string name="select_test">Check me for testing purpose</string>
    <string name="force_add_header">Check me to enable special identification header in all networks</string>
    <string name="appSizeLabel">Size:</string>
    <string name="appTimeLabel">Time:</string>
    <string name="install_cert_label">Click the button below if you want to reinstall the credential. Please leave the password field empty and click "OK"!</string>
    <string name="install_cert_button">Reinstall credential</string>
    <string name="consent_form_title">Consent Form</string>
    <string name="consent_form"><Data>
<![CDATA[ We would like to invite you to take part in a research project. The purpose of this research study is to understand how cellular Internet providers give different performance to different network traffic from your smartphone. For example, we would like to know if a provider is speeding up YouTube traffic and/or slowing down Netflix. We will use this information to understand how often this occurs, where this occurs and what are the implications. <br>
We are asking you to participate in this study because you are a smartphone user who has installed our app for detecting traffic differentiation. The decision to participate in this research project is voluntary. You do not have to participate and you can uninstall the app at any time. Even if you begin using the app, you can stop at any time. You must be at least 18 years of age to participate. <br>
You can run tests from the app as many or as few times as you like. We would like you to run tests on different networks that you mobile device connects to, and at different times of day. <br>
The possible risks or discomforts of the study are minimal. When you use the app, we will record the traffic it generates and use this data to determine whether your Internet service provider (ISP) is interfering with your network traffic in any way. If you choose to record your own app traffic for replaying, we will store this traffic as well. This data will be shared only with co-investigators, and it will not be annotated with any personally identifiable information. If available, we will collect information about your network, signal strength, operating system, and coarse-grained location (no more precise than a 1km radius of your location). <br>
There are no direct benefits to you from participating in this study. However, by running the app you may help us learn more about how ISPs interfere with Internet traffic from mobile devices. You will not be paid for your participation in this study. <br>
Your part in this study is anonymous to the researcher(s). However, because of the nature of Internet traffic, it is possible that participants could be identified by the IP address or other electronic records associated with the response. We will anonymize any IP addresses that could be used to identify you once we have processed the data to detect differentiation. Any reports or publications based on this research will use only group data and will not identify you or any individual as being affiliated with this project. <br>
If you have any questions about this study, please feel free to email <strong>David Choffnes</strong> at <a href="mailto:meddle-support@lists.ccs.neu.edu ">meddle-support@lists.ccs.neu.edu </a>, the person mainly responsible for the research.
If you have any questions about your rights in this research, you may contact <strong>Nan C. Regina</strong>, Director, Human Subject Research Protection, 960 Renaissance Park, Northeastern University, Boston, MA 02115. Email: <strong>n.regina@neu.edu.</strong> You may contact anonymously if you wish. <br>
If you have any questions regarding electronic privacy, please feel free to contact <strong>Mark Nardone</strong>, NU’s Director of Information Security via email at <strong>privacy@neu.edu</strong>. <br>
This study has been reviewed and approved by the Northeastern University Institutional Review Board (#14-08-16). ]]>
</Data></string>
    <string name="consent_form_condition"><Data><![CDATA[ <br> By clicking the \"Accept\" button below you are indicating that you consent to participate in this study. Please print out a copy of this consent form for your records. ]]></Data></string>
    <string name="user_agree">Accept</string>
    <string name="user_disagree">Decline</string>
    <string name="no_diff">No differentiation</string>
    <string name="has_diff">Differentiation detected!</string>
    <string name="history_button">Result History</string>
    <string name="start_button">Start</string>
    <string name="default_result">No previous result available</string>
    
    <string name="help_info"><Data><![CDATA[ About traffic manipulation:<br><br>
        <strong>Type 1</strong> means that we detected IP flipping in your network and our current approach failed to handle it.<br>
        <strong>Type 2</strong> means that we detected other forms of networking issues. It could be another kind of traffic manipulation or network fluctuation. ]]></Data></string>

    <!-- This is for mobilyzer -->
    <string name="scheduler_version_name">1.0</string>
    <string name="scheduler_priority">2</string>
    <string name="title_activity_entrance">Differentiation Detector</string>
    <string name="hello_world">Hello world!</string>

</resources>
