<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbars="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/mainPageTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/timing_label"
            android:textColor="@color/blue11"
            android:textSize="@dimen/main_title_text_size"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/settings_timing"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:entries="@array/timing"
            android:padding="10dp"
            android:prompt="@string/timing_label" />

        <TextView
            android:id="@+id/selectServerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/server_label"
            android:textColor="@color/blue11"
            android:textSize="@dimen/main_title_text_size"
            android:textStyle="bold" />
        
        <EditText 
            android:id="@+id/settings_server"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:text="@string/server_replay"
            android:hint="@string/server_hint" />"
        
        <TextView
            android:id="@+id/selectIterationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/select_iteration"
            android:textColor="@color/blue11"
            android:textSize="@dimen/main_title_text_size"
            android:textStyle="bold" />
        
        <Spinner
            android:id="@+id/settings_iteration"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:entries="@array/iteration"
            android:padding="10dp"
            android:prompt="@string/iteration_2" />
        
        <!-- <LinearLayout
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal" >
        	<com.gc.materialdesign.views.CheckBox
            	android:id="@+id/selectRandomCheckBox"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:layout_gravity="left"
            	android:padding="5dp" />
        	<TextView
	            android:id="@+id/selectIterationTextView1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:padding="10dp"
	            android:text="@string/select_random"
	            android:textColor="@color/blue11"
	            android:textSize="@dimen/main_title_text_size"
	            android:textStyle="bold" />
        </LinearLayout> -->
        
        <!-- <com.gc.materialdesign.views.CheckBox
            android:id="@+id/selectRandomCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:padding="5dp"
            android:text="123" /> -->
        
        <CheckBox 
            android:id="@+id/selectRandomCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="@string/select_random" />
        
        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/installCertButton"
            android:layout_width="wrap_content"
            android:layout_height="50sp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:text="@string/install_cert_button"
            android:background="@color/blue6"
            android:textSize="15sp" />
    </LinearLayout>

</ScrollView>