<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/replay_main_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:background="@color/blue14"
        android:orientation="horizontal" >

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/disagreeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:radius="20sp"
            android:layout_weight="1"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:padding="5dp"
            android:shadowColor="#000"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="10"
            android:text="@string/user_disagree"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:background="@color/blue6"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/mainPageTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/consent_form_title"
            android:textColor="@color/white"
            android:textSize="@dimen/main_title_text_size"
            android:textStyle="bold" />

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/agreeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:padding="5dp"
            android:shadowColor="#000"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="10"
            android:text="@string/user_agree"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:background="@color/blue6"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ll1"
        android:padding="10dp" >

        <LinearLayout
            android:id="@+id/instructions_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbars="vertical" >

            <TextView
                android:id="@+id/consentForm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_gravity="center_vertical" />

            <TextView
                android:id="@+id/consentFormCondition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>