<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
     >

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue14"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/backButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:background="@drawable/buttonshape_prev"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:padding="5dp"
            android:shadowColor="#000"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="10"
            android:text="@string/back_button"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/mainPageTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:padding="10dp"
            android:text="@string/selected_apps"
            android:textColor="@color/white"
            android:textSize="@dimen/main_title_text_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/replayButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@drawable/buttonshape"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:padding="5dp"
            android:shadowColor="#000"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="10"
            android:text="@string/replay"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ExpandableListView
        android:id="@+id/appsListView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll1"
        android:divider="@drawable/listitem"
        android:dividerHeight="1.5dip" 
        android:groupIndicator="@drawable/expandable"
        >
    </ExpandableListView>

    
    
    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appsListView"
        android:background="@color/blue1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/selectedAppsMsgTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="@dimen/main_title_text_size"
            android:textStyle="bold"
             android:gravity="right"
             />

        <TextView
            android:id="@+id/selectedAppsSizeTextView"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="@dimen/main_title_text_size"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>